Fixed name overflow

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -111,12 +111,6 @@ html, body {
 }
 
 /* Misc */
-.truncate {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
 .center {
   display: flex;
   align-items: center;
@@ -128,6 +122,33 @@ html, body {
 
 .hidden {
   display: none;
+}
+
+/* styles for truncate '...' */
+.truncate {
+  overflow: hidden;
+  position: relative;
+  line-height: 1.5rem;
+  max-height: 1.5rem;
+  text-align: justify;
+  margin-right: -0.5rem;
+  padding-right: 1rem;
+}
+/* create the ... */
+.truncate:before {
+  content: '...';
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+.truncate:after {
+  content: '';
+  position: absolute;
+  right: 0;
+  width: 1rem;
+  height: 1rem;
+  margin-top: 0.2rem;
+  background: white;
 }
 
 @media screen and (min-width: 320px) {
